# paper-to-md

./: .gitignore  README.md  pdf2md.py  pyproject.toml
pdf2md/: __init__.py  cli.py
pdf2md/agent/: cleanup.py
pdf2md/extraction/: __init__.py  docling.py
pdf2md/postprocess/: __init__.py  bibliography.py  figures.py  sections.py
pdf2md/test_report/new_logos_filtered/: devarajan-2024-dftracer-8fcb_raw.md  enrichments.json  figures.json
pdf2md/test_report/old_with_logos/: code_blocks.json  devarajan-2024-dftracer-8fcb.md  enrichments.json  figures.json
scripts/iowarp_publications/: pyproject.toml
src/pdf2md/: cli.py
src/pdf2md/agent/: __init__.py  cleanup.py
src/pdf2md/extraction/: enrichments.py
src/pdf2md/postprocess/: citations.py  cleanup.py  figures.py  sections.py
src/scripts/: batch_convert.py
src/scripts/iowarp_publications/: main.py
tests/: __init__.py  test_figures.py  test_sections.py
